<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgCloseTerms"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/red"
                        android:background="@drawable/ic_close_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/terms_and_conditions_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/terms_terms_content_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/data_protection_act_2020"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/terms_data_content_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/terms_cookie_content_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="start"
                        android:layout_marginRight="30dp"
                        android:id="@+id/layoutBottom"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:buttonTint="@color/red"
                            android:id="@+id/chckBoxAgree"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <TextView
                            android:id="@+id/txtTermsAndCondition"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:fontFamily="@font/gotham_medium"
                            android:text="I accept"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>