<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:background="@drawable/ic_radyo_icon"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:text="@string/rate_your_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:backgroundTint="@color/white"
                android:progressTint="@color/yellow"
                android:secondaryProgressTint="@color/yellow"
                android:stepSize="1"
                android:rating="4"
                style="@style/RatingBar"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <EditText
                android:paddingTop="15dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:hint="@string/enter_your_reviews"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/gotham_medium"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/lightGray"
                android:layout_width="match_parent"
                android:layout_height="160dp"/>

            <Button
                android:layout_marginBottom="30dp"
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:layout_marginRight="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingVertical="15dp"
                android:text="@string/send" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>