<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.forgotpassword.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgHeaderBackground"
                android:background="@drawable/forgotpassbg"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <LinearLayout
                android:layout_below="@+id/imgHeaderBackground"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/linearLayoutMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtMessage"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:fontFamily="@font/gotham_medium"
                    android:text="Success Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnGotIt"
                    android:onClick="clickedListener"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gotham_medium"
                    android:paddingVertical="15dp"
                    android:text="Got it!"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutForgotFields"
                android:visibility="visible"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imgHeaderBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/gotham_bold"
                    android:textSize="16dp"
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gotham_light"
                    android:textSize="14dp"
                    android:lineSpacingMultiplier="1.4"
                    android:text="Don\'t worry! Enter your email address and we will send a link to reset your password."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/gotham_medium"
                    android:textSize="14dp"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <EditText
                    android:id="@+id/userEmail"
                    android:textSize="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/gotham_light"
                    android:layout_marginTop="8dp"
                    style="@style/EditTextTheme"
                    android:hint="@string/enter_email" />
                <TextView
                    android:id="@+id/emailErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ErrTextView"
                    android:visibility="gone"/>

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/forgotPassSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:onClick="clickedListener"
                        android:textSize="12dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="8dp"
                        android:layout_toLeftOf="@+id/btnCancel"
                        android:fontFamily="@font/gotham_medium"
                        android:text="@string/submit"
                        android:textAllCaps="false" />

                    <Button
                        android:layout_centerInParent="true"
                        android:textAllCaps="false"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/gotham_medium"
                        android:id="@+id/btnCancel"
                        android:textSize="12dp"
                        android:onClick="clickedListener"
                        android:layout_width="100dp"
                        android:layout_height="55dp"
                        android:text="@string/cancel" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>