<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.forgotpassword.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgHeaderBackground"
                android:background="@drawable/ic_changepassword_background"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <ImageView
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_radyonow_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imgHeaderBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/gotham_bold"
                    android:textSize="16dp"
                    android:text="@string/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:lineSpacingMultiplier="1.4"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gotham_light"
                    android:textSize="14dp"
                    android:text="Don't feel secure? You can always change your password."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/gotham_medium"
                    android:textSize="14dp"
                    android:text="@string/old_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleTint="@color/red"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOldPassword"
                        android:textStyle="bold"
                        style="@style/EditTextTheme"
                        android:textSize="14dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_old_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/oldPassErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ErrTextView"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gotham_medium"
                    android:textSize="14dp"
                    android:text="@string/new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/red"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNewPassword"
                        android:textStyle="bold"
                        style="@style/EditTextTheme"
                        android:textSize="14dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/newPassErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ErrTextView"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gotham_medium"
                    android:textSize="14dp"
                    android:text="Confirm New Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    android:layout_height="wrap_content"
                    app:passwordToggleTint="@color/red"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtConfirmNewPassword"
                        android:textStyle="bold"
                        style="@style/EditTextTheme"
                        android:textSize="14dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/confirmPassErr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ErrTextView"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:gravity="center"
                        android:id="@+id/btnChangePassword"
                        android:textSize="12dp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/gotham_bold"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:layout_height="60dp"
                        android:text="Change Password" />

                    <Button
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btnCancel"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/gotham_bold"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="60dp"
                        android:text="Cancel" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>